# signal-jsx

./: README.md  package.json  pnpm-lock.yaml
playground/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
playground/src/: Count.tsx  main.ts
swc-plugin-signal-jsx/: .gitignore  .rustfmt.toml  Cargo.toml  README.md  package.json
swc-plugin-signal-jsx/src/: binding.rs  component.rs  hydration.rs  import.rs  jsx2html.rs  lib.rs  node.rs  regex_macro.rs  shared.rs  signal_jsx.rs
swc-plugin-signal-jsx/tests/: fixture.rs  prefix.tsx
swc-plugin-signal-jsx/tests/fixture/: test.output.tsx  test.tsx
swc-plugin-signal-jsx/tests/fixture1/: test.output.tsx  test.tsx
vite-plugin-signal-jsx/: README.md  main.ts  package.json  pnpm-lock.yaml  tsconfig.json
