[package]
name = "swc-plugin-signal-jsx"
version = "0.1.1"
edition = "2021"
authors = ["westhide <mr.westhide@gmail.com>"]
description = "SWC plugin for transforming Signal JSX."
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
# This removes more dead code
codegen-units = 1
lto = true
# Optimize for size
opt-level = "s"

# Strip debug symbols
strip = "symbols"

[dependencies]
serde = "1"
once_cell = "1.16.0"
regex = "1.7.0"
swc_core = { version = "0.43.*", features = [
    "plugin_transform",
    "common",
    "ecma_parser",
    "ecma_codegen",
    "ecma_transforms_typescript",
    "ecma_transforms_optimization",
    "ecma_quote",
    "ecma_utils",
    "ecma_minifier",
    "testing_transform"
] }

[dev-dependencies]
testing = "0.31.14"

